--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,63 @@
-.App {
-  text-align: center;
+.landing {
+  box-sizing: border-box;
+  font-size: 16px;
+  margin: 1em 24em;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
+.header {
+  justify-content: space-between;
+  border-bottom: 1px solid grey;
   align-items: center;
+}
+
+.flex {
+  display: flex;
+}
+
+.rightHeader {
+}
+
+.vertical {
+  flex-direction: column;
+  align-self: center;
+  margin-left: 4ch;
+}
+
+.personalImage {
+  width: 22%;
+  border-radius: 50%;
+  height: 300px;
+}
+
+.centerAlign {
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.intro {
+  margin-top: 5em;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.education {
+  margin-top: 5em;
+}
+
+.spaceBetween {
+  justify-content: space-between;
+}
+
+.edCard {
+  background-color: lightgray;
+  border-radius: 1em;
+  padding: 2em;
+}
+
+.projectCard {
+  width: 50%;
+  background-color: lightgray;
+  border-radius: 1em;
+  padding: 2em;
+}
+
+.projectCard + .projectCard {
+  margin-left: 1em;
 }
