--- a/src/components/Quote.css
+++ b/src/components/Quote.css
@@ -9,6 +9,8 @@
     width: 70%;
     word-spacing: 0.1em;
     line-height: 1.8;
+    text-align: center;
+    font-size: 20px;
   }
   .author {
   }
