--- a/src/App.css
+++ b/src/App.css
@@ -16,7 +16,7 @@
 .vertical {
   flex-direction: column;
   align-self: center;
-  margin-left: 4ch;
+  margin-left: 4em;
 }
 
 .centerAlign {
@@ -62,6 +62,16 @@
   border-radius: 1em;
 }
 
+.textAlign {
+  text-align: center;
+}
+
+.contactFormHeading {
+  width: fit-content;
+  margin: 0 auto;
+  letter-spacing: 1px;
+}
+
 .typed {
   overflow: hidden;
   white-space: nowrap;
@@ -77,5 +87,22 @@
   }
   to {
     width: 100%;
+  }
+}
+
+.contactForm {
+  display: flex;
+  flex-direction: column;
+  margin-top: 4em;
+  .subject {
+    margin-top: 1em;
+  }
+  .message {
+    margin-top: 1em;
+  }
+  .submitBtn {
+    width: fit-content;
+    margin: 0 auto;
+    margin-top: 1em !important;
   }
 }
