--- a/src/components/MovingQuotes.css
+++ b/src/components/MovingQuotes.css
@@ -1,6 +1,6 @@
 .movingQuotes {
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   margin-top: 3em;
   align-items: center;
 }
