--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,22 @@
+@media only screen and (max-width: 425px) {
+  .avatarPlusText {
+    flex-direction: column;
+  }
+  .avatar {
+    margin: 0 auto;
+  }
+  .intro {
+    .introText {
+      text-align: center !important;
+    }
+  }
+}
+
 .landing {
   box-sizing: border-box;
   font-size: 18px;
-  margin: 1em 24em;
+  margin: 1em auto;
+  max-width: 850px;
   .logo {
     width: 10%;
   }
@@ -19,18 +34,16 @@
 .vertical {
   flex-direction: column;
   align-self: center;
-  margin-left: 4em;
 }
-
-.centerAlign {
-  justify-content: center;
+.avatarPlusText {
+  justify-content: space-between;
 }
-
 .intro {
   margin: 10em 0;
 
   .introText {
-    width: 40%;
+    width: 55%;
+    text-align: justify;
   }
 
   .aboutMeText {
